--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@ body {
 
   width: 100%;
   height: 100%;
-
+  padding: 0;
   margin: 0;
+  background-color: #111212;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 ::-webkit-scrollbar {
