--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
   border-style: solid;
   border-image: linear-gradient( to bottom, rgba(92,37,231,1), rgba(0, 0, 0, 0) ) 1 100%;
   border-left: none;
-  width: 700px;
+  width: 800px;
   margin: auto;
   height: 100%;
   min-width: 50%;
@@ -124,7 +124,7 @@ button {
   position: fixed;
   height: 100px;
   top: 50px;
-  left: 8%;
+  left: 60px;
   display: flex;
   flex-direction: row;
   visibility: hidden;
